--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 
         async function loadTexasCameras(allCameras) {
             try {
-                const response = await fetch(`https://its.txdot.gov/ITS_WEB/FrontEnd/api/conditions.geojson?key=${DRIVETEXAS_API_KEY}`);
+                const response = await fetch(CORS_PROXY + encodeURIComponent(`https://its.txdot.gov/ITS_WEB/FrontEnd/api/conditions.geojson?key=${DRIVETEXAS_API_KEY}`));
                 const data = await response.json();
 
                 if (data && data.features && Array.isArray(data.features)) {
@@ -490,7 +490,9 @@
                         if (pole.mapCameras && Array.isArray(pole.mapCameras)) {
                             pole.mapCameras.forEach((cam) => {
                                 if (cam.latitude && cam.longitude) {
-                                    const streamUrl = cam.streamDictionary?.find(s => s.streamSource)?.streamSource;
+                                    const streamUrl = (cam.streamDictionary && Array.isArray(cam.streamDictionary))
+                                        ? cam.streamDictionary.find(s => s.streamSource)?.streamSource
+                                        : undefined;
                                     allCameras.push({
                                         id: `ok-${cam.cameraId}`,
                                         lat: cam.latitude,
