--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 
         async function loadTexasCameras(allCameras) {
             try {
-                const response = await fetch(CORS_PROXY + encodeURIComponent(`https://its.txdot.gov/ITS_WEB/FrontEnd/api/conditions.geojson?key=${DRIVETEXAS_API_KEY}`));
+                const response = await fetch(`https://its.txdot.gov/ITS_WEB/FrontEnd/api/conditions.geojson?key=${DRIVETEXAS_API_KEY}`);
                 const data = await response.json();
 
                 if (data && data.features && Array.isArray(data.features)) {
@@ -489,14 +489,16 @@
                     data.forEach((pole) => {
                         if (pole.mapCameras && Array.isArray(pole.mapCameras)) {
                             pole.mapCameras.forEach((cam) => {
-                                if (cam.latitude && cam.longitude) {
+                                const lat = parseFloat(cam.latitude);
+                                const lng = parseFloat(cam.longitude);
+                                if (!isNaN(lat) && !isNaN(lng)) {
                                     const streamUrl = (cam.streamDictionary && Array.isArray(cam.streamDictionary))
                                         ? cam.streamDictionary.find(s => s.streamSource)?.streamSource
                                         : undefined;
                                     allCameras.push({
                                         id: `ok-${cam.cameraId}`,
-                                        lat: cam.latitude,
-                                        lng: cam.longitude,
+                                        lat: lat,
+                                        lng: lng,
                                         title: `${pole.name} - ${cam.location || cam.direction}`,
                                         source: 'Oklahoma',
                                         direction: cam.direction,
@@ -686,6 +688,9 @@
             selectedCamera = camera;
             const popup = document.getElementById('cameraPopup');
 
+            const lat = typeof camera.lat === 'number' ? camera.lat.toFixed(4) : parseFloat(camera.lat).toFixed(4);
+            const lng = typeof camera.lng === 'number' ? camera.lng.toFixed(4) : parseFloat(camera.lng).toFixed(4);
+
             let html = `
                 <div class="popup-header">
                     <h3>📷 ${camera.title}</h3>
@@ -693,7 +698,7 @@
                 </div>
                 <div class="popup-content">
                     <div class="popup-meta">
-                        Source: ${camera.source} | Lat: ${camera.lat.toFixed(4)}, Lng: ${camera.lng.toFixed(4)}
+                        Source: ${camera.source} | Lat: ${lat}, Lng: ${lng}
                         ${camera.direction ? ` | Direction: ${camera.direction}` : ''}
                     </div>
             `;
