--- a/index.html
+++ b/index.html
@@ -346,8 +346,6 @@
         let selectedCamera = null;
         let clusterIndex;
         let markers = [];
-        const DRIVETEXAS_API_KEY = '829ca858-ef46-430a-a010-e2e60857ef4e';
-        const CORS_PROXY = 'https://corsproxy.io/?';
 
         async function loadAllCameras() {
             const allCameras = [];
@@ -454,22 +452,24 @@
 
         async function loadTexasCameras(allCameras) {
             try {
-                const response = await fetch(`https://its.txdot.gov/ITS_WEB/FrontEnd/api/conditions.geojson?key=${DRIVETEXAS_API_KEY}`);
+                const response = await fetch('https://raw.githubusercontent.com/anony121221/maps-data/refs/heads/main/txdot_cameras.geojson');
                 const data = await response.json();
 
                 if (data && data.features && Array.isArray(data.features)) {
                     data.features.forEach((feature) => {
                         if (feature.geometry && feature.geometry.coordinates && feature.properties) {
                             const props = feature.properties;
-                            if (props.type === 'Camera' && props.image_url) {
+                            const lat = parseFloat(feature.geometry.coordinates[1]);
+                            const lng = parseFloat(feature.geometry.coordinates[0]);
+                            if (!isNaN(lat) && !isNaN(lng)) {
                                 allCameras.push({
-                                    id: `tx-${props.id}`,
-                                    lat: feature.geometry.coordinates[1],
-                                    lng: feature.geometry.coordinates[0],
-                                    title: props.name || 'Texas Camera',
-                                    source: 'DriveTexas',
+                                    id: `tx-${props.id || Math.random()}`,
+                                    lat: lat,
+                                    lng: lng,
+                                    title: props.name || props.title || 'Texas Camera',
+                                    source: 'Texas DOT',
                                     imageUrl: props.image_url,
-                                    webUrl: props.web_url || props.image_url,
+                                    webUrl: props.web_url,
                                 });
                             }
                         }
