--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         .loading-indicator.hidden { display: none !important; }
         .spinner { width: 20px; height: 20px; border: 3px solid #334155; border-top-color: #3b82f6; border-radius: 50%; animation: spin 0.8s linear infinite; }
         @keyframes spin { to { transform: rotate(360deg); } }
-        .camera-popup { position: absolute; top: 1rem; right: 1rem; background: #1e293b; border-radius: 12px; box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5); max-width: 450px; width: 90%; z-index: 10; overflow: hidden; max-height: 80vh; overflow-y: auto; }
+        .camera-popup { position: absolute; top: calc(1rem + 330px); right: 1rem; background: #1e293b; border-radius: 12px; box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5); max-width: 450px; width: 90%; z-index: 10; overflow: hidden; max-height: 65vh; overflow-y: auto; }
         .camera-popup.hidden { display: none !important; }
         .popup-header { background: #3b82f6; padding: 1rem; display: flex; align-items: center; justify-content: space-between; }
         .popup-header h3 { font-size: 1rem; font-weight: 600; display: flex; align-items: center; gap: 0.5rem; }
@@ -53,6 +53,25 @@
         .error-banner { position: absolute; top: 1rem; left: 50%; transform: translateX(-50%); background: #dc2626; color: white; padding: 0.75rem 1.5rem; border-radius: 8px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); z-index: 10; max-width: 80%; }
         .error-banner.hidden { display: none !important; }
 
+        .control-panel { position: absolute; top: 1rem; right: 1rem; z-index: 11; display: flex; flex-direction: column; gap: 0.75rem; width: min(380px, 90%); }
+        .control-card { background: #111827; border: 1px solid #1f2937; border-radius: 12px; padding: 0.75rem 1rem; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.35); }
+        .control-title { font-size: 0.95rem; font-weight: 700; color: #e2e8f0; display: flex; align-items: center; gap: 0.5rem; margin-bottom: 0.5rem; }
+        .control-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 0.5rem; }
+        .control-label { font-size: 0.75rem; color: #94a3b8; margin-bottom: 0.25rem; display: block; }
+        .control-input { width: 100%; padding: 0.6rem 0.75rem; background: #0f172a; border: 1px solid #1f2937; border-radius: 8px; color: #e2e8f0; font-size: 0.9rem; }
+        .control-input:focus { outline: none; border-color: #3b82f6; box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1); }
+        .control-actions { display: flex; justify-content: space-between; align-items: center; gap: 0.5rem; margin-top: 0.5rem; }
+        .btn-secondary { background: #1f2937; border: 1px solid #334155; color: #e2e8f0; padding: 0.5rem 0.75rem; border-radius: 8px; cursor: pointer; font-weight: 600; }
+        .btn-secondary:hover { border-color: #3b82f6; color: white; }
+        .result-count { font-size: 0.8rem; color: #94a3b8; }
+        .result-count strong { color: #e2e8f0; }
+        .results-list { list-style: none; max-height: 240px; overflow-y: auto; margin-top: 0.5rem; display: flex; flex-direction: column; gap: 0.4rem; }
+        .result-item { background: #0f172a; border: 1px solid #1f2937; border-radius: 10px; padding: 0.6rem 0.75rem; cursor: pointer; transition: border-color 0.2s, transform 0.1s; }
+        .result-item:hover { border-color: #3b82f6; transform: translateY(-1px); }
+        .result-title { font-weight: 700; color: #e2e8f0; font-size: 0.95rem; }
+        .result-meta { font-size: 0.75rem; color: #94a3b8; margin-top: 0.15rem; display: flex; gap: 0.5rem; flex-wrap: wrap; }
+        .empty-state { color: #94a3b8; text-align: center; padding: 0.75rem; font-size: 0.85rem; border: 1px dashed #1f2937; border-radius: 10px; background: #0b1222; }
+
     </style>
 </head>
 <body>
@@ -67,6 +86,8 @@
         let clusterIndex;
         let markers = [];
         let logs = [];
+        let activeSourceFilter = 'all';
+        let searchTerm = '';
 
         function addLog(message, type = 'info') {
             const timestamp = new Date().toLocaleTimeString();
@@ -362,6 +383,26 @@
                         <span>Loading cameras...</span>
                     </div>
                     <div id="errorBanner" class="error-banner hidden"></div>
+                    <div class="control-panel">
+                        <div class="control-card">
+                            <div class="control-title">🔎 Camera finder</div>
+                            <div class="control-grid">
+                                <div>
+                                    <label class="control-label" for="searchInput">Search by name or road</label>
+                                    <input id="searchInput" class="control-input" type="search" placeholder="e.g. I-10, Lake Charles" oninput="handleSearchInput(event)">
+                                </div>
+                                <div>
+                                    <label class="control-label" for="sourceFilter">Filter by source</label>
+                                    <select id="sourceFilter" class="control-input" onchange="handleSourceChange(event)"></select>
+                                </div>
+                            </div>
+                            <div class="control-actions">
+                                <div class="result-count"><strong id="resultCount">0</strong> matches</div>
+                                <button class="btn-secondary" onclick="resetSearchFilters()">Reset filters</button>
+                            </div>
+                            <ul id="searchResults" class="results-list"></ul>
+                        </div>
+                    </div>
                     <div id="cameraPopup" class="camera-popup hidden"></div>
                 `;
                 initMap(mapTilerKey);
@@ -405,6 +446,8 @@
             try {
                 cameras = await loadAllCameras();
                 document.getElementById('cameraCount').textContent = cameras.length;
+                populateSourceFilter();
+                renderSearchResults();
 
                 clusterIndex = new Supercluster({
                     radius: 50,
@@ -492,6 +535,95 @@
                     markers.push(marker);
                 }
             });
+        }
+
+        function populateSourceFilter() {
+            const select = document.getElementById('sourceFilter');
+            if (!select) return;
+
+            const sourceCounts = cameras.reduce((acc, cam) => {
+                acc[cam.source] = (acc[cam.source] || 0) + 1;
+                return acc;
+            }, {});
+
+            const options = [`<option value="all">All sources (${cameras.length})</option>`];
+            Object.keys(sourceCounts)
+                .sort()
+                .forEach((source) => {
+                    options.push(`<option value="${source}">${source} (${sourceCounts[source]})</option>`);
+                });
+            select.innerHTML = options.join('');
+            select.value = activeSourceFilter;
+        }
+
+        function handleSearchInput(event) {
+            searchTerm = event.target.value.trim().toLowerCase();
+            renderSearchResults();
+        }
+
+        function handleSourceChange(event) {
+            activeSourceFilter = event.target.value;
+            renderSearchResults();
+        }
+
+        function resetSearchFilters() {
+            activeSourceFilter = 'all';
+            searchTerm = '';
+
+            const searchInput = document.getElementById('searchInput');
+            const sourceFilter = document.getElementById('sourceFilter');
+            if (searchInput) searchInput.value = '';
+            if (sourceFilter) sourceFilter.value = 'all';
+
+            renderSearchResults();
+        }
+
+        function renderSearchResults() {
+            const list = document.getElementById('searchResults');
+            const resultCount = document.getElementById('resultCount');
+            if (!list || !resultCount) return;
+
+            const filtered = cameras
+                .filter((cam) => activeSourceFilter === 'all' || cam.source === activeSourceFilter)
+                .filter((cam) => {
+                    if (!searchTerm) return true;
+                    const haystack = `${cam.title} ${cam.roadway || ''} ${cam.direction || ''} ${cam.source || ''}`.toLowerCase();
+                    return haystack.includes(searchTerm);
+                })
+                .slice(0, 50);
+
+            resultCount.textContent = filtered.length;
+
+            if (!filtered.length) {
+                list.innerHTML = '<li class="empty-state">No cameras match the current search.</li>';
+                return;
+            }
+
+            list.innerHTML = filtered
+                .map((cam) => `
+                    <li class="result-item" onclick="focusCamera('${cam.id}')">
+                        <div class="result-title">${cam.title}</div>
+                        <div class="result-meta">
+                            <span>${cam.source}</span>
+                            ${cam.roadway ? `<span>🛣 ${cam.roadway}</span>` : ''}
+                            ${cam.direction ? `<span>🧭 ${cam.direction}</span>` : ''}
+                        </div>
+                    </li>
+                `)
+                .join('');
+        }
+
+        function focusCamera(cameraId) {
+            const camera = cameras.find((cam) => cam.id === cameraId);
+            if (!camera || !map) return;
+
+            map.easeTo({
+                center: [camera.lng, camera.lat],
+                zoom: Math.max(map.getZoom(), 12),
+                duration: 800
+            });
+
+            setTimeout(() => showCameraPopup(camera), 400);
         }
 
         function showCameraPopup(camera) {
