Fix snapshot cache busting through proxy

--- a/index.html
+++ b/index.html
@@ -221,6 +221,11 @@
       return date.toLocaleString("en-US", { timeZone: "America/Chicago" });
     }
 
+    function addCacheBuster(url) {
+      const separator = url.includes("?") ? "&" : "?";
+      return `${url}${separator}t=${Date.now()}`;
+    }
+
     function showSnapshot(url) {
       destroyHls();
       videoEl.pause();
@@ -228,8 +233,8 @@
       videoEl.style.display = "none";
       snapshotImg.style.display = "block";
 
-      const target = `${CORS_PROXY}${encodeURIComponent(url)}&t=${Date.now()}`;
-      snapshotImg.src = target;
+      const snapshotUrl = addCacheBuster(url);
+      snapshotImg.src = `${CORS_PROXY}${encodeURIComponent(snapshotUrl)}`;
       setStatus("Showing sensor snapshot (refreshes every 15 seconds).");
     }
 
@@ -279,7 +284,8 @@
       const resolution = props.resolution || "—";
       const updated = toCst(props.last_updated || props.last_update);
       const pictureTime = toCst(props.picture_timestamp || props.picture_time);
-      const thumbnail = `${CORS_PROXY}${encodeURIComponent(`http://oktrafficradar.org/hrserver/${id}/latest.jpg`)}&t=${Date.now()}`;
+      const snapshotUrl = `http://oktrafficradar.org/hrserver/${id}/latest.jpg`;
+      const thumbnail = `${CORS_PROXY}${encodeURIComponent(addCacheBuster(snapshotUrl))}`;
 
       return `
         <div>
